--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+arch:
+  - amd64
+  - ppc64le
 python:
   - "3.4"
   - "3.5"
@@ -7,6 +10,12 @@ python:
   - "3.8"
   - "3.9"
   - "pypy3"
+# Disable unsuported version  pypy for ppc64le
+jobs:
+  exclude:
+  - arch: ppc64le
+    python: pypy3
+
 install:
   - pip install .
 script:
